# skanr

./: README.md  pyproject.toml
.github/workflows/: codeql-analysis.yml
skanr/: cli.py
