[tool.poetry]
name = "skan"
version = "0.0.1"
description = "Multithreaded IPV4 port scanner written in python"
authors = ["Stephen Eaton <seaton@strobotics.com.au>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/madeinoz67/skan"
keywords = ["portscanner", "security"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Topic :: System :: Systems Administration",
    "Topic :: Security",
    "Topic :: Utilities"
]

include=[
    "LICENSE",
]

[tool.poetry.dependencies]
python = ">=3.7"
argparse = "^1.4.0"
ipaddress = "^1.0.23"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
bandit = "^1.7.0"

[tool.poetry.scripts]
skan = "skan.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
